--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ShoppingList</string>
+    <string name="hit_name">Name</string>
+    <string name="hint_count">Count</string>
+    <string name="btn_save">Save</string>
 </resources>
